--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
 	<img style="height: 34px; margin-top: 0pt; margin-bottom: 0pt; margin-right: 5pt;" src="{{ "/img/gregory-malecha.jpg" }}" />
       </a>
       {{ site_sep }}
-      <a href="{{ site.base_url }}{{ site[page.section].section_url }}">{{ page.section }}</a>
+      <a href="{{ site.base_url }}/{{ page.section_dir }}">{{ page.section }}</a>
     </div>
     {% endif %}
 
