--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,8 @@
 
     {% include footer.html %}
     {% include js.html %}
+    {% if page.mathjax %}
+    <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+    {% endif %}
     </body>
 </html>
