adding a new background image.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 {% when 1 %}
 {% assign poster_image = "/img/pond.jpg" %}
 {% when 2 %}
-{% assign poster_image = "/img/flight-crop.jpg" %}
+{% assign poster_image = "/img/clouds.jpg" %}
 {% else %}
 {% assign poster_image = "/img/franconia.jpg" %}
 {% endcase %}
