--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     {% include footer.html %}
     {% include js.html %}
     {% if page.mathjax %}
+    <script type="text/x-mathjax-config">
+MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']], processEscapes: true } });
+    </script>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
     {% endif %}
     </body>
