"slides" from the meeetup.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,20 @@ layout: card-page
 	<small>{{ page.author }} @ {{ page.date | date: "%b %-d, %Y" }}</small>
       </section>
       <main>
+{% comment %}
+	{% if page.links %}
+	<div style="float: right; padding: 10pt; margin-left: 10pt; border: 1pt solid black; background: lightgrey">
+	  <h6>Links</h6>
+	<ul style="list-style: circle;">
+	  {% for lnk in page.links %}
+	  {% for link in lnk %}
+	  <li><a href="{{ link[1] }}">{{ link[0] }}</a></li>
+	  {% endfor %}
+	  {% endfor %}
+	</ul>
+	</div>
+	{% endif %}
+{% endcomment %}
 	{{ content }}
       </main>
       <section class="social-share">
