--- a/css/syntax-dark.css
+++ b/css/syntax-dark.css
@@ -13,7 +13,7 @@ cyan      #2aa198  strings, numbers
 green     #859900  operators, other keywords
 */
 
-.highlight { background-color: #002b36; border-radius: 5pt; color: #93a1a1; padding: 10pt; }
+pre.highlight { background-color: #002b36; border-radius: 5pt; color: #93a1a1; padding: 10pt; }
 .highlight .c { color: #586e75 } /* Comment */
 .highlight .err { color: #93a1a1 } /* Error */
 .highlight .g { color: #93a1a1 } /* Generic */
